fix(dropdown): aligned visibility on small viewport (#DS-4460) (#1247)
(cherry picked from commit b5378980685f1e4d0ba351a0883eb5672c68a5cd)

--- a/packages/components/dropdown/dropdown.scss
+++ b/packages/components/dropdown/dropdown.scss
@@ -32,6 +32,7 @@
 }
 
 .kbq-dropdown__panel {
+    overflow: auto;
     min-width: var(--kbq-dropdown-size-container-width-min);
     max-width: var(--kbq-dropdown-size-container-width-max);
 
